fix: ajustes en lógica y mapeos
Se corrigen y mejoran ProductUseCase, ProductRestMapper y configuración en pom.xml